cabal-version:      3.0
name:               kiroku-store-migrations
version:            0.2.0.0
synopsis:           Schema migrations for kiroku-store
description:
  Native pg-migrate component, Codd history mapping, and migration executable
  for installing and upgrading the PostgreSQL schema used by @kiroku-store@.

homepage:           https://github.com/shinzui/kiroku
bug-reports:        https://github.com/shinzui/kiroku/issues
author:             Nadeem Bitar
maintainer:         nadeem@gmail.com
license:            BSD-3-Clause
build-type:         Simple
category:           Database, Eventing
extra-doc-files:    CHANGELOG.md
extra-source-files:
  migrations/*.sql
  migrations/manifest
  migrations.lock
  README.md

source-repository head
  type:     git
  location: https://github.com/shinzui/kiroku.git

common common
  default-language:   GHC2024
  default-extensions:
    DeriveAnyClass
    DuplicateRecordFields
    OverloadedLabels
    OverloadedStrings

library
  import:          common
  exposed-modules:
    Kiroku.Store.Migrations
    Kiroku.Store.Migrations.History.Codd
    Kiroku.Store.Migrations.New

  other-modules:
    Kiroku.Store.Migrations.Internal.Definition
    Kiroku.Store.Migrations.Internal.EmbedFile

  hs-source-dirs:  src
  build-depends:
    , base                    >=4.18     && <5
    , bytestring              >=0.11     && <0.13
    , containers              >=0.6      && <0.8
    , filepath                >=1.4      && <1.6
    , pg-migrate              ^>=1.0.0.0
    , pg-migrate-embed        ^>=1.0.0.0
    , pg-migrate-import-codd  ^>=1.0.0.0
    , template-haskell        >=2.20     && <2.24
    , text                    >=2.0      && <2.2

executable kiroku-store-migrate
  import:         common
  main-is:        Main.hs
  hs-source-dirs: app
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , aeson                    >=2.1      && <2.3
    , base                     >=4.18     && <5
    , bytestring               >=0.11     && <0.13
    , hasql                    >=1.10     && <1.11
    , kiroku-store-migrations
    , optparse-applicative     >=0.17     && <0.20
    , pg-migrate               ^>=1.0.0.0
    , pg-migrate-cli           ^>=1.0.0.0
    , text                     >=2.0      && <2.2

test-suite kiroku-store-migrations-test
  import:         common
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: test
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , async
    , base                     >=4.18     && <5
    , bytestring               >=0.11     && <0.13
    , directory                >=1.3
    , ephemeral-pg             >=0.2      && <0.3
    , filepath                 >=1.4      && <1.6
    , hasql                    >=1.10     && <1.11
    , hspec                    >=2.10     && <2.12
    , kiroku-store-migrations
    , pg-migrate               ^>=1.0.0.0
    , pg-migrate-import-codd   ^>=1.0.0.0
    , pg-migrate-test-support  ^>=1.0.0.0
    , temporary                >=1.3      && <1.4
    , text                     >=2.0      && <2.2
