cabal-version: 3.0
name:          kiroku-store
version:       0.1.0.0
synopsis:      High-performance PostgreSQL event store
license:       BSD-3-Clause
build-type:    Simple

common common
  default-language:   GHC2024
  default-extensions:
    DeriveAnyClass
    DuplicateRecordFields
    OverloadedLabels
    OverloadedStrings

library
  import:          common
  exposed-modules:
    Kiroku.Store
    Kiroku.Store.Append
    Kiroku.Store.Connection
    Kiroku.Store.Effect
    Kiroku.Store.Effect.Resource
    Kiroku.Store.Error
    Kiroku.Store.Lifecycle
    Kiroku.Store.Link
    Kiroku.Store.Notification
    Kiroku.Store.Observability
    Kiroku.Store.Read
    Kiroku.Store.Schema
    Kiroku.Store.Subscription
    Kiroku.Store.Subscription.Effect
    Kiroku.Store.Subscription.EventPublisher
    Kiroku.Store.Subscription.Stream
    Kiroku.Store.Subscription.Types
    Kiroku.Store.Subscription.Worker
    Kiroku.Store.Transaction
    Kiroku.Store.Types

  other-modules:   Kiroku.Store.SQL
  build-depends:
    , aeson                >=2.1
    , async                >=2.2
    , base                 >=4.18   && <5
    , bytestring           >=0.11
    , containers           >=0.6
    , effectful-core       >=2.4
    , file-embed           >=0.0.15
    , generic-lens         >=2.2
    , hasql                >=1.10
    , hasql-notifications  >=0.2
    , hasql-pool           >=1.2
    , hasql-transaction    >=1.1
    , lens                 >=5.2
    , mmzk-typeid          >=0.6
    , stm
    , streamly-core        >=0.3
    , text                 >=2.0
    , time                 >=1.12
    , unliftio-core        >=0.2
    , uuid                 >=1.3
    , vector               >=0.13

  hs-source-dirs:  src

test-suite kiroku-store-test
  import:         common
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: test
  other-modules:
    Test.Concurrency
    Test.FailureInjection
    Test.Helpers
    Test.Properties
    Test.Transaction

  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , aeson
    , async              >=2.2
    , base               >=4.18 && <5
    , containers         >=0.6
    , effectful-core     >=2.4
    , ephemeral-pg       >=0.2
    , generic-lens       >=2.2
    , hasql              >=1.10
    , hasql-pool         >=1.2
    , hasql-transaction  >=1.1
    , hedgehog           >=1.4
    , hspec              >=2.10
    , hspec-hedgehog     >=0.0
    , kiroku-store
    , lens               >=5.2
    , stm
    , text               >=2.0
    , time               >=1.12
    , uuid
    , vector             >=0.13

benchmark kiroku-store-bench
  import:         common
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: bench
  ghc-options:    -threaded -rtsopts "-with-rtsopts=-N -A32m"
  build-depends:
    , aeson
    , async         >=2.2
    , base          >=4.18 && <5
    , deepseq       >=1.4
    , ephemeral-pg  >=0.2
    , generic-lens  >=2.2
    , kiroku-store
    , lens          >=5.2
    , tasty-bench   >=0.4
    , text          >=2.0
    , time          >=1.12
    , uuid
    , vector        >=0.13

benchmark kiroku-shibuya-overhead
  import:         common
  type:           exitcode-stdio-1.0
  main-is:        ShibuyaOverhead.hs
  hs-source-dirs: bench
  ghc-options:    -threaded -rtsopts "-with-rtsopts=-N -A32m" -O2
  build-depends:
    , aeson
    , base            >=4.18 && <5
    , containers      >=0.6
    , effectful       >=2.4
    , effectful-core  >=2.4
    , ephemeral-pg    >=0.2
    , generic-lens    >=2.2
    , kiroku-store
    , lens            >=5.2
    , shibuya-core
    , stm
    , streamly        >=0.11
    , streamly-core   >=0.3
    , text            >=2.0
    , time            >=1.12
    , unliftio        >=0.2
    , uuid
