cabal-version: 3.0
name:          kiroku-test-support
version:       0.1.0.0
synopsis:      Shared test fixtures for Kiroku packages
license:       BSD-3-Clause
build-type:    Simple

common common
  default-language:   GHC2024
  default-extensions:
    DeriveAnyClass
    DuplicateRecordFields
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings

library
  import:          common
  exposed-modules: Kiroku.Test.Postgres
  hs-source-dirs:  src
  build-depends:
    , base                     >=4.18     && <5
    , ephemeral-pg             >=0.2
    , hasql                    >=1.10
    , hasql-pool               >=1.2
    , kiroku-store-migrations
    , pg-migrate               ^>=1.0.0.0
    , stm
    , text                     >=2.0
