cabal-version:   3.0
name:            shibuya-kiroku-adapter
version:         0.1.0.0
synopsis:
  Kiroku event store adapter for the Shibuya queue processing framework

description:
  A Shibuya adapter that integrates with Kiroku, a PostgreSQL event store.
  Wraps Kiroku's push-based subscriptions into Shibuya's pull-based Adapter
  interface, enabling supervised multi-subscription processing with failure
  isolation, per-subscription metrics, and coordinated graceful shutdown.
  .
  Events flow through a bounded TBQueue bridge (provided by
  @kiroku-store@'s @subscriptionStream@) and are lifted into Shibuya's
  effect stack via @Stream.morphInner@. Checkpoint management is handled
  internally by Kiroku's subscription worker — the adapter's ack semantics
  are no-op for AckOk\/AckRetry\/AckDeadLetter and trigger subscription
  cancellation for AckHalt.

author:          Nadeem Bitar
maintainer:      nadeem@gmail.com
license:         BSD-3-Clause
build-type:      Simple
category:        Concurrency, Database, Eventing
extra-doc-files: CHANGELOG.md

common common
  default-language:   GHC2024
  default-extensions:
    DeriveAnyClass
    DuplicateRecordFields
    OverloadedLabels
    OverloadedStrings

  ghc-options:        -Wall

library
  import:          common
  exposed-modules:
    Shibuya.Adapter.Kiroku
    Shibuya.Adapter.Kiroku.Convert

  build-depends:
    , base            >=4.18 && <5
    , effectful-core  >=2.4
    , kiroku-store    >=0.1
    , shibuya-core    >=0.1
    , streamly-core   >=0.3
    , text            >=2.0
    , uuid            >=1.3

  hs-source-dirs:  src
